News UAT/force-app/main/default/objects/Optimisation_Log__c/Optimisation_Log__c.object-meta.xml
<CustomObject>
    <label>Optimisation Log</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Optimisation Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Optimisation Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>