News UAT/force-app/main/default/objects/Optimisation_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Campaign_Order__r.Account__c</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>