News UAT/force-app/main/default/objects/Optimisation_Log__c/fields/Campaign_Order__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Optimisation Logs</relationshipLabel>
    <relationshipName>Optimisation_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>