News UAT/force-app/main/default/objects/Optimisation_Log__c/fields/Campaign_Order_of_PO__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Order_of_PO__c</fullName>
    <formula>Product_Order__r.Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Campaign Order</label>
    <type>Text</type>
</CustomField>