News UAT/force-app/main/default/objects/Optimisation_Log__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Change Action/Goal</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>