News UAT/force-app/main/default/objects/Optimisation_Log__c/fields/Created_Date_Internal__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Internal__c</fullName>
    <formula>CreatedDate</formula>
    <label>Created Date Internal</label>
    <type>Date</type>
</CustomField>