News UAT/force-app/main/default/objects/Optimisation_Log__c/fields/Fulfilment_Group__c.field-meta.xml
<CustomField>
    <fullName>Fulfilment_Group__c</fullName>
    <label>Fulfilment Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEM</fullName>
            </value>
            <value>
                <fullName>RTB</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>Facebook Landing Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>