News UAT/force-app/main/default/objects/Optimisation_Log__c/fields/Goal_Of_Change__c.field-meta.xml
<CustomField>
    <fullName>Goal_Of_Change__c</fullName>
    <label>Type Of Change</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pacing And Delivery</fullName>
            </value>
            <value>
                <fullName>Margin Management</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Tracking Update</fullName>
            </value>
            <value>
                <fullName>Set up Change</fullName>
            </value>
            <value>
                <fullName>Client Change Request</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Creative Update</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Improve Budget Performance</fullName>
            </value>
            <value>
                <fullName>Improve CTR</fullName>
            </value>
            <value>
                <fullName>Improve Conversion Rate</fullName>
            </value>
            <value>
                <fullName>Improve Relevancy</fullName>
            </value>
            <value>
                <fullName>Increase Traffic</fullName>
            </value>
            <value>
                <fullName>Reduce CPC</fullName>
            </value>
            <value>
                <fullName>Reduce CPA</fullName>
            </value>
            <value>
                <fullName>Improve Quality Score</fullName>
            </value>
            <value>
                <fullName>Client Revisions Errors</fullName>
            </value>
            <value>
                <fullName>Account Insights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>