News UAT/force-app/main/default/objects/Optimisation_Log__c/recordTypes/Campaign.recordType-meta.xml
<RecordType>
    <fullName>Campaign</fullName>
    <active>false</active>
    <label>Campaign</label>
</RecordType>