News UAT/force-app/main/default/objects/Optimisation_Log__c/recordTypes/RTB.recordType-meta.xml
<RecordType>
    <fullName>RTB</fullName>
    <active>true</active>
    <label>RTB</label>
</RecordType>