News UAT/force-app/main/default/objects/Optimisation_Log__c/recordTypes/SEM.recordType-meta.xml
<RecordType>
    <fullName>SEM</fullName>
    <active>false</active>
    <label>SEM</label>
</RecordType>